Fix machine name wrapping and misc UI improvements

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1370,6 +1370,7 @@ select option:checked {
 // =====================================================
 .swipeable-container {
   position: relative;
+  overflow: hidden;
 }
 
 .swipeable-content {
@@ -1382,50 +1383,36 @@ select option:checked {
 .swipe-actions {
   position: absolute;
   top: 0;
+  right: 0;
   bottom: 0;
   display: flex;
   align-items: stretch;
   z-index: 0;
-  opacity: 0;
-  width: 0;
-  overflow: hidden;
-
-  &.swipe-actions-right {
-    right: 0;
-    background: $danger;
-  }
-
-  &.swipe-actions-left {
-    left: 0;
-    background: $info;
-  }
 }
 
 .swipe-action {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex: 1;
+  width: 80px;
   color: white;
   font-size: 0.75rem;
   font-weight: 600;
   text-transform: uppercase;
   border: none;
   cursor: pointer;
-  background: transparent;
+
+  &.swipe-action-delete {
+    background: $danger;
+  }
+
+  &.swipe-action-edit {
+    background: $primary;
+  }
 
   i {
     font-size: 1.25rem;
   }
-}
-
-// Make the form wrapper from button_to fill the action panel
-.swipe-actions form {
-  display: flex;
-  align-items: stretch;
-  width: 100%;
-  height: 100%;
-  margin: 0;
 }
 
 // =====================================================
